RESOLVED FIXED208728
Crash accessing AXIsolatedObject::m_childrenIDS from removeSubtree on the main thread.
https://bugs.webkit.org/show_bug.cgi?id=208728
Summary Crash accessing AXIsolatedObject::m_childrenIDS from removeSubtree on the mai...
Andres Gonzalez
Reported 2020-03-06 12:15:18 PST
Crash accessing AXIsolatedObject::m_childrenIDS from removeSubtree on the main thread.
Attachments
Patch (4.94 KB, patch)
2020-03-06 12:30 PST, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-03-06 12:30:15 PST
WebKit Commit Bot
Comment 2 2020-03-06 15:30:35 PST
Comment on attachment 392754 [details] Patch Clearing flags on attachment: 392754 Committed r258034: <https://trac.webkit.org/changeset/258034>
WebKit Commit Bot
Comment 3 2020-03-06 15:30:37 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2020-03-06 15:31:12 PST
Note You need to log in before you can comment on or make changes to this bug.