Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.h
@@ -71,8 +71,8 @@ public:
 
     // Call on main thread
     void appendNodeChanges(const Vector<NodeChange>&);
+    // Removes the given node and all its descendants.
     void removeNode(AXID);
-    void removeSubtree(AXID);
 
     // Both setRootNode and setFocusedNode must be called only during the
     // generation of the IsolatedTree.
